<resources>
    <string name="app_name">ToDo App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="tasks_list_fragment">Tasks List Fragment</string>
    <string name="edit_task_fragment_label">Edit Task Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_title">Мои дела</string>
    <string name="done_n">Выполнено — %d</string>
    <string name="save">Сохранить</string>
    <string name="textview">TextView TextView TextView TextView TextView\n TextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\nTextView TextView TextView TextView TextView\n</string>
    <string name="new_task_hint">Что надо сделать…</string>
    <string name="importance">Важность</string>
    <string name="importance_no">Нет</string>
    <string name="importance_low">Низкий</string>
    <string name="importance_high">!! Высокий</string>
    <string name="deadline_title">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="notification_text">Сегодня вам нужно сделать %d задач</string>
    <string name="notification_description">Не забудьте )</string>
    <string name="reminder_channel_name">Канал напоминаний</string>
    <string name="reminder_channel_description">Напоминает о задачах на сегодня</string>
</resources>