<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/popup_imp_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:text="@string/importance_no"/>
        <TextView
            android:id="@+id/popup_imp_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:text="@string/importance_low"/>
        <TextView
            android:id="@+id/popup_imp_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorError"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:text="@string/importance_high"/>
    </LinearLayout>




</androidx.cardview.widget.CardView>