<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/colorSurface"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/edit_task_et_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:hint="@string/new_task_hint"
                android:minHeight="100dp"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/edit_task_importance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:text="@string/importance"/>
            <TextView
                android:id="@+id/edit_task_importance_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textAppearance="@style/TextAppearance.MyTheme.Subhead"
                android:text="@string/importance_no"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:id="@+id/edit_task_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                    android:text="@string/deadline_title"/>
                <TextView
                    android:id="@+id/edit_task_deadline_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:textAppearance="@style/TextAppearance.MyTheme.Subhead"
                    tools:text="2 июня 2021"/>
            </LinearLayout>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/edit_task_deadline_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/edit_task_tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/delete"
            android:textColor="?attr/colorError"
            app:drawableStartCompat="@drawable/ic_delete" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>